16/fix regula vulns 20230627 (#17)
* creating a seperate MFA role

* Setting a variable to enable mfa

* jsonencodes for mfa enable on eks

Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>

* fixing local name

* addressing tfline interpolation errors

* remove commented out code

* set softfail false

* update terraform docs

* move action to run on every push

* chore: terraform README update and fmt

* fix editing issue

* chore: terraform README update and fmt

* fix edits

* change branch to test and set severity

* set seveirty to high

* switching to main

* moving comment for vulnerability remediation

* chore: terraform README update and fmt

* setting eks_use_mfa to false to not break down stream users

* chore: terraform README update and fmt

---------

Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/pre-commit-pr.yml
+++ b/.github/workflows/pre-commit-pr.yml
@@ -1,11 +1,12 @@
 name: pre-commit
 
 on:
-  pull_request:
+  push:
 
 jobs:
   scan-terraform:
     uses: defenseunicorns/uds-common-workflows/.github/workflows/terraform-scan.yaml@main
     with:
-      soft-fail: true
+      regula-severity: high 
+      soft-fail: true 
       github-token: $GITHUB_TOKEN
