fix: migrate to a common workflow (#15)
* initial commit of workflow migration

* comment out so tests do not run on PR creation

* uncomment test

* move testing files

* 16/fix regula vulns 20230627 (#17)

* creating a seperate MFA role

* Setting a variable to enable mfa

* jsonencodes for mfa enable on eks

Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>

* fixing local name

* addressing tfline interpolation errors

* remove commented out code

* set softfail false

* update terraform docs

* move action to run on every push

* chore: terraform README update and fmt

* fix editing issue

* chore: terraform README update and fmt

* fix edits

* change branch to test and set severity

* set seveirty to high

* switching to main

* moving comment for vulnerability remediation

* chore: terraform README update and fmt

* setting eks_use_mfa to false to not break down stream users

* chore: terraform README update and fmt

---------

Co-authored-by: Micah Nagel <mjnagel@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* remove s char

* test regula when default value is changed

* mfa variables defaults and test scan test

* chore: terraform README update and fmt

* set set insecure mfa value

* add eks_use_mfa to example main

* fix typo

* set mfa true in insecure example

* mess with formatting and readme

* chore: terraform README update and fmt

* fix format

* testing again with changing the default value

* chore: terraform README update and fmt

* fix formatting

* set insecure fixture to mfa false

* setting default to false

* chore: terraform README update and fmt

* set default value to true

* chore: terraform README update and fmt

* set default to false and turn off regula failures

* chore: terraform README update and fmt

* setting default to off and turn off regula pi

--- a/.github/workflows/test-module.yml
+++ b/.github/workflows/test-module.yml
@@ -13,6 +13,9 @@ on:
       - main
     paths-ignore:
       - "**.md"
+      - "release-please-config.json"
+      - ".release-please-manifest.json"
+      - "**.txt"
 
 permissions:
   id-token: write
@@ -31,12 +34,8 @@ jobs:
     # Only run when the pull request is not in draft status
     if: github.event.pull_request.draft == false
     steps:
-
-      - name: Checkout the code
-        uses: actions/checkout@v3
-
-      - name: Initialize Pipeline
-        uses: ./.github/actions/init-pipeline
+      - name: Install sshuttle
+        run: sudo apt-get install -y sshuttle sshpass iptables 
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -45,8 +44,23 @@ jobs:
           role-session-name: ${{ github.event.client_payload.pull_request.head.sha || github.sha }}
           aws-region: us-east-1
           # 21600 seconds == 6 hours
+          # 1800 seconds == 30 minutes
           role-duration-seconds: 21600
-
-      - name: Run live infra tests
+      
+      - name: AWS SSM SSH config
         run: |
-          make test
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          echo "host i-* mi-*" >> ~/.ssh/config
+          echo "	ProxyCommand sh -c \"aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters 'portNumber=%p'\"" >> ~/.ssh/config 
+      
+      # - name: Setup tmate session
+      #   uses: mxschmitt/action-tmate@v3
+      #   with: 
+      #     detached: true
+
+      - name: Run Shared Test workfow
+        uses: defenseunicorns/uds-common-workflows/.github/actions/terraform-test@main
+        with:
+          test_retry: 1
+          test_timeout: 3h
