--- a/.github/workflows/pre-commit-pr.yml
+++ b/.github/workflows/pre-commit-pr.yml
@@ -1,49 +1,12 @@
 name: pre-commit
 
 on:
-  pull_request:
+  push:
 
 jobs:
-  common:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: common
-
-  terraform:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: terraform
-
-  golang:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: golang
-
-  renovate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: pre-commit
-        uses: ./.github/actions/pre-commit
-        with:
-          check-type: renovate
+  scan-terraform:
+    uses: defenseunicorns/uds-common-workflows/.github/workflows/terraform-scan.yaml@main
+    with:
+      regula-severity: off 
+      soft-fail: false 
+      github-token: $GITHUB_TOKEN
